--- a/index.html
+++ b/index.html
@@ -410,13 +410,11 @@
                         and Renewable Energy Conference (IPRECON) was the 3rd edition of India's
                         first IEEE IAS Club of 6 Technical Paper Conference organized by IEEE
                         Student Branch College of Engineering Karunagappally (IEEE SB CEK),
-                        technically sponsored by IEEE IAS, IEEE PES and IEEE PELS. IPRECON
+                        technically sponsored by IEEE IAS, IEEE PES, and IEEE PELS. IPRECON
                         provides a platform for students and professionals from all around
                         the world to share their findings in the fields of Power, Renewable
-                        Energy and Computing Technologies. With the theme “Engineering the
-                        sustainable world with Renewable Energy Resources through ingenious
-                        computing technologies”, the conference was held on the 16th,
-                        17th and 18th of December 2022 in College of Engineering Karunagappally,
+                        Energy and Computing Technologies. The conference was held on the 16th,
+                        17th and 18th of December 2022 at the College of Engineering Karunagappally,
                         Kerala, India.
                     </p>
                     <div>
@@ -432,7 +430,7 @@
                                 <strong>Papers Accepted: 164</strong>
                             </button>
                         </a>
-                        <a href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">
+                        <a href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">
                             <button class="btn btn-primary" type="button"
                                 style="margin-bottom: 30px;background-color:  #210F21;width: 250px;height: 45px; border-radius: 10px; ">
                                 <strong>View Published Papers</strong>
@@ -448,13 +446,13 @@
                         and Renewable Energy Conference (IPRECON) was the 2nd edition of India's
                         first IEEE IAS Club of 6 Technical Paper Conference organized by IEEE
                         Student Branch College of Engineering Karunagappally (IEEE SB CEK),
-                        technically sponsored by IEEE IAS, IEEE PES and IEEE PELS. IPRECON
+                        technically sponsored by IEEE IAS, IEEE PES, and IEEE PELS. IPRECON
                         provides a platform for students and professionals from all around
                         the world to share their findings in the fields of Power, Renewable
                         Energy and Computing Technologies. With the theme “Engineering the
-                        sustainable world with Renewable Energy Resources through ingenious
-                        computing technologies”, the conference was held on the 24th,
-                        25th and 26th of September 2021 in College of Engineering Karunagappally,
+                        a sustainable world with Renewable Energy Resources through ingenious
+                        computing technologies”, The conference was held on the 24th,
+                        25th and 26th of September 2021 at the College of Engineering Karunagappally,
                         Kerala, India.
                     </p>
                     <div>
@@ -484,16 +482,16 @@
             <div class="col-md-12" style="margin-bottom: 0px; padding-left: 50px; padding-right: 50px;">
                 <h2 style="font-size: 25px;margin-bottom: 20px;"><strong>IPRECON 2020</strong><br></h1>
                     <p class="text-justify" style="font-size: 14px;">International Power and Renewable Energy
-                        Conference (IPRECON 2020) was an integrated crate for the young
+                        The conference (IPRECON 2020) was an integrated crate for the young
                         students and professionals all over the world to embed the technical quality.
-                        The conference emphasized the international environment for sharing of knowledge
-                        in our domains, connect yourself to the industrial professionals and multi disciplinary
-                        discussion on the latest advances.The conference has session from over our diverse technical
-                        committees which cover the complete spectrum of industrial applicationsFocus area of the
+                        The conference emphasized the international environment for sharing knowledge
+                        in our domains, connecting yourself to industrial professionals and multi-disciplinary
+                        discussion on the latest advances. The conference has sessions from our diverse technical
+                        committees which cover the complete spectrum of industrial applications. The focus area of the
                         conferences are Power Electronic Converters and Control Systems, Wide band gap devices,
                         Electric machines and drives, Renewable energy Resources, Distributed generation and Grid
                         Interconnection, Electric Vehicles, Energy Storage & Battery Charging Techniques, Power
-                        Quality issues, Microgrid & Smartgrid, Lighting technologies, Energy Policies & Standards.
+                        Quality issues, Microgrid and smartgrid, Lighting technologies, Energy Policies & Standards.
                         The conference proceeding was submitted to the IEEE Xplore® Digital Library.
                     </p>
                     <div>
