--- a/index.html
+++ b/index.html
@@ -406,16 +406,12 @@
         <div class="row" style="margin-top: 40px;">
             <div class="col-md-12" style="margin-bottom: 0px; padding-left: 50px; padding-right: 50px;">
                 <h2 style="font-size: 25px;margin-bottom: 20px;"><strong>IPRECON 2022</strong><br></h1>
-                    <p class="text-justify" style="font-size: 14px;">2022 IEEE International Power
-                        and Renewable Energy Conference (IPRECON) was the 3rd edition of India's
-                        first IEEE IAS Club of 6 Technical Paper Conference organized by IEEE
-                        Student Branch College of Engineering Karunagappally (IEEE SB CEK),
-                        technically sponsored by IEEE IAS, IEEE PES, and IEEE PELS. IPRECON
-                        provides a platform for students and professionals from all around
-                        the world to share their findings in the fields of Power, Renewable
-                        Energy and Computing Technologies. The conference was held on the 16th,
-                        17th and 18th of December 2022 at the College of Engineering Karunagappally,
-                        Kerala, India.
+                    <p class="text-justify" style="font-size: 14px;">The 2022 IEEE International Power and Renewable Energy Conference (IPRECON)
+                        marked the third iteration of India's inaugural IEEE IAS Club's Technical Paper Conference, which was organized by the
+                        IEEE Student Branch at the College of Engineering Karunagappally (IEEE SB CEK). This conference received technical
+                        sponsorship from IEEE IAS, IEEE PES, and IEEE PELS. IPRECON served as a global platform for both students and professionals
+                        to exchange their research findings in the areas of Power, Renewable Energy, and Computing Technologies. The event took place
+                        from December 16th to December 18th, 2022, at the College of Engineering Karunagappally in Kerala, India.
                     </p>
                     <div>
                         <a href="#0">
