--- a/cfp.html
+++ b/cfp.html
@@ -125,7 +125,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"><img src="assets/CFP_IPRECON.pdf" style="width: 100%;"></div>
+                <div class="col-md-12"><img src="assets/CFP_3.pdf" style="width: 100%;"></div>
             </div>
         </div>
     </div>
@@ -133,7 +133,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-right" style="margin-top: 44px;"><a href="#0"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submission Closed</strong><br></button></a>
+                <div class="col-md-12 text-right" style="margin-top: 44px;"><a href="#0"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submission opens soon</strong><br></button></a>
                     <a href="assets/CFP-3.pdf" style="padding-left: 1.5em;"><button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Download CFP</strong><br></button></a></div>
             </div>
         </div>
