--- a/cfp.html
+++ b/cfp.html
@@ -64,8 +64,8 @@
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Presented Papers of IPRECON 2022 have been posted in the IEEE Xplore® Digital Library! To View
-            <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a>
+        <span>Paper submissions for IPRECON 2023 opens on 10th September 2023
+<!--             <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
     
