--- a/cfp.html
+++ b/cfp.html
@@ -125,7 +125,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"><img src="assets/CFP-3.pdf" style="width: 100%;"></div>
+                <div class="col-md-12"><img src="assets/cfp-latest.png" style="width: 100%;"></div>
             </div>
         </div>
     </div>
