--- a/registration.html
+++ b/registration.html
@@ -128,82 +128,82 @@
     <h1 class="text-center" style="margin-bottom: 5px;"><span>Registration Details</span></h1>
     <h4 class="text-center" style="margin-top: 1rem; margin-bottom: 2rem;">(Read the Registration Guidelines Carefully Before Registering)</h4>
     <div class="container" style="margin-bottom: 80px;">
-            <div class="row">
-                <h6 class="text-center" style="margin-bottom: 10px; font-weight: bolder;">&#10229 Scroll the Table right and left &#10230</h6>
-                <table class="table table-hover table-responsive">
-                    <thead>
-                      <tr>
-                        <th>Registration Type</th>
-                        <th style="text-align: center;">Indian Delegates IEEE Members</th>
-                        <th style="text-align: center;">Indian Delegates Non-IEEE Members</th>
-                        <th style="text-align: center;">Foreign Delegates IEEE Members</th>
-                        <th style="text-align: center;">Foreign Delegates Non-IEEE Members</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>Author - Delegate from Industry/Academician</td>
-                        <td style="text-align: center;">2000 INR</td>
-                        <td style="text-align: center;">2500 INR</td>
-                        <td style="text-align: center;">64 USD</td>
-                        <td style="text-align: center;">72 USD</td>               
-                      </tr>
-                      <tr>
-                        <td>Co-Author - Delegate from Industry/Academician
-                            <br>
-                            <a href="#coauthor">
-                                <h6 style="color: red; font-size: small;"><b>(Conditions Applied - Click here!)</b></h6>
-                            </a>
-                        </td>
-                        <td style="text-align: center;">1000 INR</td>
-                        <td style="text-align: center;">1500 INR</td>
-                        <td style="text-align: center;">44 USD</td>
-                        <td style="text-align: center;">52 USD</td>               
-                      </tr>
-                      <tr>
-                        <td>Author - Student</td>
-                        <td style="text-align: center;">1600 INR</td>
-                        <td style="text-align: center;">1900 INR</td>
-                        <td style="text-align: center;">48 USD</td>
-                        <td style="text-align: center;">56 USD</td>
-                      </tr>
-                      <tr>
-                        <td>Co-Author - Student
-                            <br>
-                            <a href="#coauthor">
-                                <h6 style="color: red; font-size: small;"><b>(Conditions Applied - Click here!)</b></h6>
-                            </a>
-                        </td>
-                        <td style="text-align: center;">600 INR</td>
-                        <td style="text-align: center;">900 INR</td>
-                        <td style="text-align: center;">28 USD</td>
-                        <td style="text-align: center;">36 USD</td>
-                      </tr>
-                      <tr>
-                        <td>Manuscript Additional Page</td>
-                        <td style="text-align: center;">500 INR</td>
-                        <td style="text-align: center;">500 INR</td>
-                        <td style="text-align: center;">10 USD</td>
-                        <td style="text-align: center;">10 USD</td>               
-                      </tr>
-                      <tr>
-                        <td>Delegate from Industry/Academician - Attendee</td>
-                        <td style="text-align: center;">400 INR</td>
-                        <td style="text-align: center;">500 INR</td>
-                        <td style="text-align: center;">30 USD</td>
-                        <td style="text-align: center;">40 USD</td>               
-                      </tr>
-                      <tr>
-                        <td>Student - Attendee</td>
-                        <td style="text-align: center;">100 INR</td>
-                        <td style="text-align: center;">200 INR</td>
-                        <td style="text-align: center;">10 USD</td>
-                        <td style="text-align: center;">20 USD</td>
-                      </tr>
-                    </tbody>
-                </table>
-                <h6 class="text-center" style="margin-top: 35px; font-weight: bolder;">&#10229 Scroll the Table right and left &#10230</h6>
-            </div>
+        <div class="row">
+            <h6 class="text-center" style="margin-bottom: 10px; font-weight: bolder;">&#10229 Scroll the Table right and left &#10230</h6>
+            <table class="table table-hover table-responsive">
+                <thead>
+                  <tr>
+                    <th>Registration Type</th>
+                    <th style="text-align: center;">Indian Delegates IEEE Members</th>
+                    <th style="text-align: center;">Indian Delegates Non-IEEE Members</th>
+                    <th style="text-align: center;">Foreign Delegates IEEE Members</th>
+                    <th style="text-align: center;">Foreign Delegates Non-IEEE Members</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Author - Delegate from Industry/Academician</td>
+                    <td style="text-align: center;">6500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right:-12px;">5300 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">8500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px;">7300 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">110 USD<span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">140 USD<span style="font-size: 12px;">(Virtual)</span></td>               
+                  </tr>
+                  <tr>
+                    <td>Co-Author - Delegate from Industry/Academician
+                        <br>
+                        <a href="#coauthor">
+                            <h6 style="color: red; font-size: small;"><b>(Conditions Applied - Click here!)</b></h6>
+                        </a>
+                    </td>
+                    <td style="text-align: center;">5000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right:-12px;">4200 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">7000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">6200 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">115 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">145 USD <span style="font-size: 12px;">(Virtual)</span></td>               
+                  </tr>
+                  <tr>
+                    <td>Author - Student</td>
+                    <td style="text-align: center;">4000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">3300 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">6000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">4900 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">100 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">125 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                  </tr>
+                  <tr>
+                    <td>Co-Author - Student
+                        <br>
+                        <a href="#coauthor">
+                            <h6 style="color: red; font-size: small;"><b>(Conditions Applied - Click here!)</b></h6>
+                        </a>
+                    </td>
+                    <td style="text-align: center;">3000 INR<hr style="border-top: 1px dashed rgb(174, 0, 255); margin-right:-12px;">2300 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">5000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">4300 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">90 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">120 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                  </tr>
+                  <tr>
+                    <td>Manuscript Additional Page</td>
+                    <td style="text-align: center;">700 INR</td>
+                    <td style="text-align: center;">700 INR</td>
+                    <td style="text-align: center;">15 USD</td>
+                    <td style="text-align: center;">15 USD</td>               
+                  </tr>
+                  <tr>
+                    <td>Attendee - Delegate from Industry/Academician</td>
+                    <td style="text-align: center;">1600 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">1200 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">2000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">1500 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">38 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">45 USD <span style="font-size: 12px;">(Virtual)</span></td>               
+                  </tr>
+                  <tr>
+                    <td>Attendee - Student</td>
+                    <td style="text-align: center;">1100 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">820 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">1500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">1120 INR <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">12 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">18 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                  </tr>
+                </tbody>
+            </table>
+            <h6 class="text-center" style="margin-top: 35px; font-weight: bolder;">&#10229 Scroll the Table right and left &#10230</h6>
+        </div>
             <div class="row" style="margin-top: 1.5rem;">
                 <ul>
                 <strong>
