--- a/registration.html
+++ b/registration.html
@@ -145,8 +145,10 @@
                     <td>Author - Delegate from Industry/Academician</td>
                     <td style="text-align: center;">7000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right:-12px;">5500 INR <span style="font-size: 12px;">(Virtual)</span></td>
                     <td style="text-align: center;">9000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px;">7500 INR <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">115 USD<span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">145 USD<span style="font-size: 12px;">(Virtual)</span></td>               
+                    <!-- <td style="text-align: center; padding-top: 2.5rem;">115 USD<span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">145 USD<span style="font-size: 12px;">(Virtual)</span></td>                -->
+                    <td style="text-align: center;">115 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right:-12px;">135 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">145 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px;">165 USD <span style="font-size: 12px;">(Virtual)</span></td>
                   </tr>
                   <tr>
                     <td>Co-Author - Delegate from Industry/Academician
@@ -157,15 +159,19 @@
                     </td>
                     <td style="text-align: center;">5500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right:-12px;">4500 INR <span style="font-size: 12px;">(Virtual)</span></td>
                     <td style="text-align: center;">7500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">6500 INR <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">120 USD <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">150 USD <span style="font-size: 12px;">(Virtual)</span></td>               
+                    <!-- <td style="text-align: center; padding-top: 2.5rem;">120 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">150 USD <span style="font-size: 12px;">(Virtual)</span></td>                -->
+                    <td style="text-align: center;">120 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right:-12px;">140 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">150 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">170 USD <span style="font-size: 12px;">(Virtual)</span></td>
                   </tr>
                   <tr>
                     <td>Author - Student</td>
                     <td style="text-align: center;">4500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">3500 INR <span style="font-size: 12px;">(Virtual)</span></td>
                     <td style="text-align: center;">6500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">5000 INR <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">105 USD <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">130 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <!-- <td style="text-align: center; padding-top: 2.5rem;">105 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">130 USD <span style="font-size: 12px;">(Virtual)</span></td> -->
+                    <td style="text-align: center;">105 USD INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">125 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">130 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">150 USD <span style="font-size: 12px;">(Virtual)</span></td>
                   </tr>
                   <tr>
                     <td>Co-Author - Student
@@ -176,8 +182,10 @@
                     </td>
                     <td style="text-align: center;">3500 INR<hr style="border-top: 1px dashed rgb(174, 0, 255); margin-right:-12px;">2500 INR <span style="font-size: 12px;">(Virtual)</span></td>
                     <td style="text-align: center;">5500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">4500 INR <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">95 USD <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">125 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <!-- <td style="text-align: center; padding-top: 2.5rem;">95 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">125 USD <span style="font-size: 12px;">(Virtual)</span></td> -->
+                    <td style="text-align: center;">115 USD<hr style="border-top: 1px dashed rgb(174, 0, 255); margin-right:-12px;">135 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">145 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">165 USD <span style="font-size: 12px;">(Virtual)</span></td>
                   </tr>
                   <tr>
                     <td>Manuscript Additional Page</td>
@@ -190,15 +198,19 @@
                     <td>Attendee - Delegate from Industry/Academician</td>
                     <td style="text-align: center;">2000 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">1500 INR <span style="font-size: 12px;">(Virtual)</span></td>
                     <td style="text-align: center;">2500 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">1500 INR <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">40 USD <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">45 USD <span style="font-size: 12px;">(Virtual)</span></td>               
+                    <!-- <td style="text-align: center; padding-top: 2.5rem;">40 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">45 USD <span style="font-size: 12px;">(Virtual)</span></td>    -->
+                    <td style="text-align: center;">40 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">65 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">45 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">65 USD <span style="font-size: 12px;">(Virtual)</span></td>            
                   </tr>
                   <tr>
                     <td>Attendee - Student</td>
                     <td style="text-align: center;">1400 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">900 INR <span style="font-size: 12px;">(Virtual)</span></td>
                     <td style="text-align: center;">1700 INR<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">1300 INR <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">15 USD <span style="font-size: 12px;">(Virtual)</span></td>
-                    <td style="text-align: center; padding-top: 2.5rem;">20 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <!-- <td style="text-align: center; padding-top: 2.5rem;">15 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center; padding-top: 2.5rem;">20 USD <span style="font-size: 12px;">(Virtual)</span></td> -->
+                    <td style="text-align: center;">15 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-right: -12px;">35 USD <span style="font-size: 12px;">(Virtual)</span></td>
+                    <td style="text-align: center;">20 USD<hr style="border-top: 1px dashed rgb(143, 45, 189); margin-left: -12px; margin-right: -12px;">40 USD <span style="font-size: 12px;">(Virtual)</span></td>
                   </tr>
                 </tbody>
             </table>
