--- a/cfp.html
+++ b/cfp.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        <span>Paper submissions for IPRECON 2023 opens on 10th September 2023
+        <span>Paper submission for IPRECON 2023 is now open.
 <!--             <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/10059458/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-right" style="margin-top: 44px;">
-                <!-- <a href="#0"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submission opens soon</strong><br></button></a> -->
+                <a href="./submission.html"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submit Now</strong><br></button></a>
                     <a href="assets/CFP-3.pdf" style="padding-left: 1.5em;"><button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Download CFP</strong><br></button></a></div>
             </div>
         </div>
@@ -147,7 +147,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="./submission.html">Submit a Paper</a></li>
+                            <li><a href="https://cmt3.research.microsoft.com/IPRECON2023">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
