--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
         direction="left" onmouseover="this.stop();" onmouseout="this.start();">
         <span>
-            Paper submissions for IPRECON 2023 opens on 10th September 2023
+            Paper submission for IPRECON 2023 is now open.
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -220,14 +220,14 @@
                     <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>27th , 28th and
                             29th December 2023</b> (Hybrid Conference)</p>
                     <hr>
-                    <!--span>
+                    <span>
                    <a href="./submission.html">              
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Submit Paper</strong></button></a>
                     </span>
                     <span>
                    <a href="./cfp.html">              
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Call for Papers</strong></button></a>
-                    </span-->
+                    </span>
                     <!-- <span>
                    <a target="blank" href="./registration.html">              
                     <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Register Now</strong></button></a>
@@ -361,9 +361,8 @@
                                             style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download
                                                 CFP</strong></button></a>
                                     &nbsp;
-                                    <a href="#0"><button class="btn btn-primary" type="button"
-                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Update
-                                                Soon</strong></button></a>
+                                    <a href="./submission.html"><button class="btn btn-primary" type="button"
+                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Submit paper</strong></button></a>
                         </div>
                     </div>
 
