--- a/submission.html
+++ b/submission.html
@@ -121,8 +121,8 @@
     <h1 class="text-center" style="margin-top: 50px;margin-bottom: 39px;"></h1>
     <h1 class="text-center d-block" style="margin-bottom: 25px;">Paper Submission</h1>
     <div class="d-block" style="margin-bottom: 24px;">
-        <br>
-        <h3 class="text-center d-block" style="margin-bottom: 25px; color: red;"><b>Submission Closed</b></h3>
+        <!-- <br> -->
+        <!-- <h3 class="text-center d-block" style="margin-bottom: 25px; color: red;"><b>Submission Closed</b></h3> -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -138,13 +138,13 @@
             <div class="row">
                 <div class="col-md-6 col-xl-7">
                     <h1 class="d-block" style="margin-bottom: 24px;font-size: 25px;"><strong>Procedure for Uploading Papers</strong><br></h1>
-                    <p class="text-left d-block" style="font-size: 13px;">1.&nbsp;<strong>Go to the paper submission website :&nbsp;</strong><a href="#0"><strong>https://cmt3.research.microsoft.com/iprecon2021</strong></a><br><br>2.&nbsp;<strong>You will see a dialog box below with the IPRECO2021 emblem on the page. If you are new to the system, please choose “Register” at the bottom of the dialog box:</strong><br><br>3.&nbsp;<strong>Follow the wizard to finish the registration. Upon finishing, you’ll have an account in the system with user ID and Password.</strong><br><br>4.&nbsp;<strong>Again, log into the system using your login account info (email address and password).&nbsp;</strong><br><br>5.&nbsp;<strong>Fill out the submission form: “Title”, “Abstract”, and “Authors” and enter email ID and details of all the co-authors (Name, Designation, Institute and the Country to which your institute is affiliated etc.) and “Submit” your paper.Choose appropriate Subject Area</strong><br><br>6.&nbsp;<strong>Please note the Microsoft CMT system does not send confirmation emails after paper submission. However, the submitting author can send email to all authors through the paper submission page. To verify your submission, you may again login to the system to check the submitted file</strong>.<br><br></p>
+                    <p class="text-left d-block" style="font-size: 13px;">1.&nbsp;<strong>Go to the paper submission website :&nbsp;</strong><a href="#0"><strong>https://cmt3.research.microsoft.com/IPRECON2023</strong></a><br><br>2.&nbsp;<strong>You will see a dialog box below with the IPRECO2021 emblem on the page. If you are new to the system, please choose “Register” at the bottom of the dialog box:</strong><br><br>3.&nbsp;<strong>Follow the wizard to finish the registration. Upon finishing, you’ll have an account in the system with user ID and Password.</strong><br><br>4.&nbsp;<strong>Again, log into the system using your login account info (email address and password).&nbsp;</strong><br><br>5.&nbsp;<strong>Fill out the submission form: “Title”, “Abstract”, and “Authors” and enter email ID and details of all the co-authors (Name, Designation, Institute and the Country to which your institute is affiliated etc.) and “Submit” your paper.Choose appropriate Subject Area</strong><br><br>6.&nbsp;<strong>Please note the Microsoft CMT system does not send confirmation emails after paper submission. However, the submitting author can send email to all authors through the paper submission page. To verify your submission, you may again login to the system to check the submitted file</strong>.<br><br></p>
                     <a href="#0"><button
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color: #210F21;width: 203px;height: 45px; border-radius: 10px;"><strong>Submission Closed</strong></button></a>
-                        <a href="assets/iprecon2021_cfp1.pdf"><button
+                        <a href="assets/CFP%2023.pdf"><button
                         class="btn btn-primary" type="button" style="margin-bottom: 30px;background-color: #210F21;width: 203px;height: 45px; border-radius: 10px;"><strong>Download CFP</strong></button></a>
                 </div>
-                <div class="col-md-6 col-xl-5"><img class="float-right" src="assets/img/cmt_submission.png" style="width: 100%;"></div>
+                <div class="col-md-6 col-xl-5"><img class="float-right" src="assets/img/cmt_submission.PNG" style="width: 100%;"></div>
             </div>
         </div>
     </div>
@@ -158,7 +158,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="#">Submit a Paper</a></li>
+                            <li><a href="./submission.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a></li>
                         </ul>
                     </div>
