--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                         <h3>Paper Submission</h3>
                         <ul>
                             <li><a href="./cfp.html">Call for Papers</a></li>
-                            <li><a href="#">Submit a Paper</a></li>
+                            <li><a href="./submission.html">Submit a Paper</a></li>
                             <li><a href="https://www.ieee.org/conferences/publishing/templates.html">Paper Template</a>
                             </li>
                         </ul>
