--- a/registration.html
+++ b/registration.html
@@ -112,7 +112,7 @@
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
                                 </div>
                             </li> -->
-                            <!-- <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li> -->
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./assets/iprecon2021_process.pdf">TECHNICAL REVIEW PROCESS</a></li>
@@ -216,7 +216,7 @@
             </table>
             <h6 class="text-center" style="margin-top: 35px; font-weight: bolder;">&#10229 Scroll the Table right and left &#10230</h6>
         </div>
-            <div class="row" style="margin-top: 1.5rem;">
+            <!-- <div class="row" style="margin-top: 1.5rem;">
                 <ul>
                 <strong>
                     <li style="color: red;">Author, Co-Author, & Manuscript additional Page Registration CLOSED</li>
@@ -224,10 +224,10 @@
                     <li style="color: green;">Attendee Registration is still OPEN!</li>
                 </strong>
                 </ul>
-            </div>
+            </div> -->
             <div style="text-align: center;">
                 <a target="blank" href="https://www.townscript.com/e/2021-ieee-international-power-and-renewable-energy-conference-iprecon-113442">              
-                 <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 155px;height: 48px;background-color: #210F21;margin-top: 5px; margin-bottom: 5px;font-size: 17px; border-radius: 10px;"><strong>Register Now</strong></button></a>
+                 <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 155px;height: 48px;background-color: #3f3f3f;margin-top: 5px; margin-bottom: 5px;font-size: 17px; border-radius: 10px;" disabled><strong>Register Now</strong></button></a>
             </div>
             <hr>
             <div class="container">
@@ -408,7 +408,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 item social"><a href="https://facebook.com/ieeeceksb"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/IEEE_SB_CEK"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/company/ieeesbcek"><i class="icon ion-social-linkedin"></i></a><a href="https://instagram.com/ieee_sb_cek"><i class="icon ion-social-instagram"></i></a>
-                        <p class="copyright">Made with &#10084 | IEEE SB CEK © 2021</p>
+                        <p class="copyright">Made with &#10084 | IEEE SB CEK © 2023</p>
                     </div>
                 </div>
             </div>
