--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
                                 aria-expanded="false" href="#">ABOUT</a>
                             <div class="dropdown-menu" role="menu">
+                                <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
+                                <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
+                                <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
+                                <a class="dropdown-item" role="presentation" href="./accomodation.html">ACCOMODATION</a>
                                 <a class="dropdown-item" role="presentation" href="https://2022.iprecon.org/">IPRECON
                                     2022</a>
                                 <a class="dropdown-item" role="presentation" href="https://2021.iprecon.org/">IPRECON
                                     2021</a>
                                 <a class="dropdown-item" role="presentation" href="https://2020.iprecon.org/">IPRECON
                                     2020</a>
-                                <a class="dropdown-item" role="presentation" href="./organizers.html">ORGANIZERS</a>
-                                <a class="dropdown-item" role="presentation" href="./venue.html">VENUE</a>
-                                <a class="dropdown-item" role="presentation" href="./kerala.html">KERALA</a>
-                                <a class="dropdown-item" role="presentation" href="./accomodation.html">ACCOMODATION</a>
                             </div>
                         </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link"
-                                href="./committee.html">COMMITTEE</a></li>
+                        <!-- <li class="nav-item" role="presentation"><a class="nav-link"
+                                href="./committee.html">COMMITTEE</a></li> -->
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
                                 aria-expanded="false" href="#">FOR AUTHORS</a>
                             <div class="dropdown-menu" role="menu">
@@ -127,8 +127,8 @@
                                 <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
                             </div>
                         </li> -->
-                        <!-- <li class="nav-item" role="presentation"><a class="nav-link"
-                                href="./registration.html">REGISTRATION</a></li> -->
+                        <li class="nav-item" role="presentation"><a class="nav-link"
+                                href="./registration.html">REGISTRATION</a></li>
                         <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                         <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a>
                         </li>
