--- a/schedule.html
+++ b/schedule.html
@@ -112,7 +112,7 @@
                                         <a class="dropdown-item" role="presentation" href="./special.html">SPECIAL TRACKS</a>
                                 </div>
                             </li> -->
-                            <!-- <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li> -->
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="./registration.html">REGISTRATION</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./location.html">LOCATION</a></li-->
                             <li class="nav-item" role="presentation"><a class="nav-link" href="./contact.html">CONTACT</a></li>
                             <!--li class="nav-item" role="presentation"><a class="nav-link" href="./assets/iprecon2021_process.pdf">TECHNICAL REVIEW PROCESS</a></li>
@@ -223,7 +223,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 item social"><a href="https://facebook.com/ieeeceksb"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/IEEE_SB_CEK"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/company/ieeesbcek"><i class="icon ion-social-linkedin"></i></a><a href="https://instagram.com/ieee_sb_cek"><i class="icon ion-social-instagram"></i></a>
-                        <p class="copyright">Made with &#10084 | IEEE SB CEK © 2021</p>
+                        <p class="copyright">Made with &#10084 | IEEE SB CEK © 2023</p>
                     </div>
                 </div>
             </div>
