--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>IPRECON 2023</title>
+    <title>IPRECON 2024</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -69,7 +69,7 @@
     <marquee style="background-color: #180918; color: white; padding-bottom: 0.8em;" behavior="scroll" scrollamount="13"
         direction="left" onmouseover="this.stop();" onmouseout="this.start();">
         <span>
-            Paper submission for IPRECON 2023 is now open.
+            Paper submission for IPRECON 2024 will open soon. 
             <!-- <a style="color: wheat;" href="https://ieeexplore.ieee.org/xpl/conhome/9640537/proceeding">Click here<i class="ionicons ion-link" style="font-size: 25px;"></i></a> -->
         </span>
     </marquee>
@@ -78,7 +78,7 @@
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="padding: 16px">
             <div class="container"><a class="navbar-brand" href="https://iprecon.org"
-                    style="font-family: Montserrat, sans-serif;"><strong>IPRECON</strong> 2023</a><button
+                    style="font-family: Montserrat, sans-serif;"><strong>IPRECON</strong> 2024</a><button
                     class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle
                         navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1"
@@ -215,10 +215,10 @@
             <div class="row">
                 <div class="col-md-12 col-xl-12 float-left" style="padding-right: 25px;padding-left: 25px;">
                     <p class="d-xl-flex"
-                        style="font-size: 32.5px;font-family: Montserrat, sans-serif;margin-top: 10px;"><strong>2023
+                        style="font-size: 32.5px;font-family: Montserrat, sans-serif;margin-top: 10px;"><strong>2024
                             International Power and Renewable Energy Conference</strong></p>
-                    <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>27th , 28th and
-                            29th December 2023</b> (Hybrid Conference)</p>
+                    <p class="text-left" style="font-size: 17px;font-family: Montserrat, sans-serif;"><b>8th , 9th and
+                            10th November 2024</b> (Hybrid Conference)</p>
                     <hr>
                     <span>
                    <a href="./submission.html">              
@@ -251,14 +251,14 @@
                         About</h1>
                     <p class="text-justify"
                         style="font-family: Montserrat, sans-serif;color: rgb(255,255,255);font-size: 13px;padding: 0px;padding-top: 0px;margin-top: 33px;">
-                        2023 IEEE International Power and Renewable Energy Conference (IPRECON) is
+                        2024 IEEE International Power and Renewable Energy Conference (IPRECON) is
                         the 4th edition of India's first IEEE IAS Club of 6 Technical Paper Conference organized
                         by the IEEE Student Branch College of Engineering Karunagappally. IPRECON provides a
                         platform for students and professionals from all around the world to share their
                         findings in the fields of Power, Renewable Energy and Computing Technologies. With
                         the theme “Engineering the sustainable world with Renewable Energy Resources through
-                        ingenious computing technologies”, the conference will be held on the 27th, 28th and
-                        29th of December 2023 at College of Engineering Karunagappally, Kerala, India.</p>
+                        ingenious computing technologies”, the conference will be held on the 8th, 9th and
+                        10th of November 2024 at College of Engineering Karunagappally, Kerala, India.</p>
                 </div>
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" style="padding: 0px;padding-top: 0px;">
                     <img src="assets/img/iprecon23_white.png" style="width: 100%;padding: 10px;margin-bottom: 39px;">
@@ -282,8 +282,8 @@
                 <div class="col-md-3">
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">10<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>September 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>Februvary 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br>
                         </div>
                     </div>
@@ -292,8 +292,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>October 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>May 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
                             <br>
@@ -304,7 +304,7 @@
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
                             <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>November 2023</b></h6>
+                            <h6 class="text-muted card-subtitle mb-2"><b>September 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
                             <br>
@@ -316,8 +316,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="500">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>November 2023</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>October 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Final Camera-Ready Paper</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p>    -->
                             <br>
@@ -358,11 +358,11 @@
                                     Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes
                                     and quality requirements.<br><br>
                                     <a href="assets/CFP 23.pdf"><button class="btn btn-primary" type="button"
-                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download
+                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Open Soon
                                                 CFP</strong></button></a>
                                     &nbsp;
-                                    <a href="./submission.html"><button class="btn btn-primary" type="button"
-                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Submit paper</strong></button></a>
+                                    <a href=""><button class="btn btn-primary" type="button"
+                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Submit paper will open soon </strong></button></a>
                         </div>
                     </div>
 
@@ -598,7 +598,7 @@
                             href="https://www.linkedin.com/company/ieeesbcek"><i
                                 class="icon ion-social-linkedin"></i></a><a href="https://instagram.com/ieee_sb_cek"><i
                                 class="icon ion-social-instagram"></i></a>
-                        <p class="copyright">Made with &#10084 | IEEE SB CEK © 2023</p>
+                        <p class="copyright">Made with &#10084 | IEEE SB CEK © 2024</p>
                     </div>
                 </div>
             </div>
