--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                                     INSTRUCTIONS</a>
                                 <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION
                                     VIDEO GUIDELINES</a>
-                                <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
-                                <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>
+                                <!-- <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>-->
+                                <!-- <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>-->
                             </div>
                         </li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="speakers.html">SPEAKERS</a>
@@ -220,12 +220,12 @@
                             10th November 2024</b> (Hybrid Conference)</p>
                     <hr>
                     <span>
-                   <a href="./submission.html">
-                    <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Submit Paper</strong></button></a>
+                  <!--  <a href="./submission.html">
+                    <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Submit Paper</strong></button></a>-->
                     </span>
                     <span>
-                   <a href="./cfp.html">
-                    <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Call for Papers</strong></button></a>
+                   <!-- <a href="./cfp.html">
+                    <button class="btn btn-primary" type="button" data-bs-hover-animate="pulse" style="width: 150px;height: 48px;background-color: #210F21;margin-top: 0px; margin-bottom: 20px;font-size: 12px; border-radius: 10px;"><strong>Call for Papers</strong></button></a>-->
                     </span>
                     <!-- <span>
                    <a target="blank" href="./registration.html">
@@ -291,7 +291,7 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
                             <h6 class="text-muted card-subtitle mb-2"><b>May 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
@@ -302,8 +302,8 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">15<sup>th</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>September 2024</b></h6>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">10<sup>th</sup></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><b>August 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
                             <br>
@@ -381,10 +381,10 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col"><img src="assets/img/Asset%205.png" data-aos="fade-up" data-aos-delay="200"
+                    <!-- <div class="col"><img src="assets/img/Asset%205.png" data-aos="fade-up" data-aos-delay="200"
                             style="max-width: 100%; height: auto;"></div>
                     <div class="col"><img src="assets/img/Asset%204.png" data-aos="fade-up" data-aos-delay="300"
-                            style="max-width: 100%; height: auto;"></div>
+                            style="max-width: 100%; height: auto;"></div> -->
                     <!-- <div class="col-md-3"><img src="assets/img/Asset%206.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: 67px;"></div> -->
                     <!-- <div class="col-md-3"><img src="assets/img/Asset%207.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: 67px;"></div>              -->
                     <div class="col "><img src="assets/img/Asset%203.png" data-aos="fade-up" data-aos-delay="500"
@@ -393,8 +393,8 @@
                     <!-- <div class="row"> -->
                     <div class="col"><img src="assets/img/Asset%202.png" data-aos="fade-up" data-aos-delay="400"
                             style="max-width: 100%; height: auto;"></div>
-                    <div class="col"><img src="assets/img/Asset%209.png" data-aos="fade-up" data-aos-delay="500"
-                            style="max-width: 100%; height: auto;"></div>
+                    <!--<div class="col"><img src="assets/img/Asset%209.png" data-aos="fade-up" data-aos-delay="500"
+                            style="max-width: 100%; height: auto;"></div> -->
                     <!--<div class="col-md-3"><img src="assets/img/Asset%208.png" data-aos="fade-up" data-aos-delay="500" style="width: 60%;margin-left: 67px;"></div>-->
                 </div>
             </div>
