Conference submitted dates and cfp has been updated with new Dates

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     INSTRUCTIONS</a>
                                 <a class="dropdown-item" role="presentation" href="./presentation.html">PRESENTATION
                                     VIDEO GUIDELINES</a>
-                                <!-- <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>-->
+                                 <a class="dropdown-item" role="presentation" href="./cfp.html">CALL FOR PAPERS</a>
                                 <!-- <a class="dropdown-item" role="presentation" href="./submission.html">SUBMISSION</a>-->
                             </div>
                         </li>
@@ -282,7 +282,7 @@
                     <div class="card" data-aos="flip-up" data-aos-delay="200" style="margin-bottom: 30px;">
                         <div class="card-body">
                             <h4 class="card-title" style="font-size: 50px; font-weight: 800">1<sup>st</sup></h4>
-                            <h6 class="text-muted card-subtitle mb-2"><b>February 2024</b></h6>
+                            <h6 class="text-muted card-subtitle mb-2"><b>March 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Open</p><br>
                         </div>
                     </div>
@@ -291,7 +291,7 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 0px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="300">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">30<sup>th</sup></h4>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
                             <h6 class="text-muted card-subtitle mb-2"><b>May 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Paper Submission Closes</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Closed)</p> -->
@@ -302,7 +302,7 @@
                 <div class="col-md-3">
                     <div class="card" style="margin-bottom: 30px;">
                         <div class="card-body" data-aos="flip-up" data-aos-delay="400">
-                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">10<sup>th</sup></h4>
+                            <h4 class="card-title" style="font-size: 50px; font-weight: 800">31<sup>st</sup></h4>
                             <h6 class="text-muted card-subtitle mb-2"><b>August 2024</b></h6>
                             <p class="card-text" style="font-size: 23px;">Notification of Acceptance</p>
                             <!-- <p class="card-text" style="font-size: 23px; color: red;">(Notified)</p> -->
@@ -356,8 +356,8 @@
                                     Accepted papers will be submitted for inclusion into the IEEE
                                     Xplore<span>&#174;</span> Digital Library subject to meeting IEEE Xplore's scopes
                                     and quality requirements.<br><br>
-                                    <a href="assets/CFP 23.pdf"><button class="btn btn-primary" type="button"
-                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>CFP Opening Soon
+                                    <a href="assets/CFP-2024.pdf"><button class="btn btn-primary" type="button"
+                                            style="margin-bottom: 30px;background-color:  #210F21;width: 203px;height: 45px; border-radius: 10px; "><strong>Download CFP
                                             </strong></button></a>
                                     &nbsp;
                                     <a href=""><button class="btn btn-primary" type="button"
