--- a/cfp.html
+++ b/cfp.html
@@ -125,7 +125,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"><img src="assets/CFP-png.png" style="width: 100%;"></div>
+                <div class="col-md-12"><img src="assets/cfp.png" style="width: 100%;"></div>
             </div>
         </div>
     </div>
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-md-12 text-right" style="margin-top: 44px;">
                 <a href="./submission.html"><button class="btn btn-primary" type="button" style="margin-bottom: 30px; font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Submit Now</strong><br></button></a>
-                    <a href="assets/NCFP.pdf" style="padding-left: 1.5em;"><button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Download CFP</strong><br></button></a></div>
+                    <a href="assets/CFP-2024.pdf" style="padding-left: 1.5em;"><button class="btn btn-primary" type="button" style="margin-bottom: 30px;font-size: 22px;height: 53px;width: 256px;background-color: #210F21; border-radius: 10px;"><strong>Download CFP</strong><br></button></a></div>
             </div>
         </div>
     </div>
